Safari footer overlap fix

--- a/css/layout.css
+++ b/css/layout.css
@@ -79,7 +79,6 @@ nav a {
 
 .container {
     min-height: 100%;
-    height: auto !important;
     height: 100%;
     margin: 0 auto -73px;
 }
